--- a/development.ini.template
+++ b/development.ini.template
@@ -54,6 +54,7 @@ beaker.session.secret = somesecret
 #sqlalchemy.url = postgresql+psycopg2://user:passwd@127.0.0.1/database
 #sqlalchemy.url = mysql://user:passwd@127.0.0.1/database?use_unicode=0&charset=utf8
 #sqlalchemy.url = mssql+pyodbc://user:passwd@127.0.0.1/database
+#sqlalchemy.url = oracle://user:passwd@127.0.0.1/SID
 sqlalchemy.pool_recycle = 3600
 
 # this is not configurable in runtime
