--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,6 @@
 *.pyc
 /Orphereus/public/js/full_*.js
 /Orphereus.egg-info/*
-/Orphereus/public/js/wakaba_Default.js
 /Orphereus/public/js/wakaba_en.js
 /Orphereus/public/js/wakaba_ru.js
+/Orphereus/public/stat_*.png
