--- a/development.ini.template
+++ b/development.ini.template
@@ -231,6 +231,9 @@ security.alertSender = alert@anoma.ch
 security.alertPassword = blablabla
 # enables HTTP referer check
 security.refControlEnabled = false
+# Referer check will be always performed if set to true
+security.refControlForAnyRequest = false
+security.refControlWhenAnonEnabled = false
 security.refControlList = anoma.ch,anoma.li,localhost,127.0.0.1
 # redirections for referers that are not in security.refControlList
 security.fakeLinks = http://www.youtube.com/watch?v=oHg5SJYRHA0,http://meatspin.com/,http://youtube.com/watch?v=Uqot33mczsw,http://youtube.com/watch?v=dZBU6WzBrX8
