--- a/development.ini.template
+++ b/development.ini.template
@@ -100,6 +100,7 @@ core.allowPosting = true
 core.allowAnonymous = false
 core.allowAnonymousPosting = false
 core.allowRegistration = false
+core.setReadonlyToRegistered = false
 core.allowAnonProfile = false
 core.allowLogin = true
 core.searchPluginId = search_like
